# scientific-calculator

./: CMakeLists.txt  Dockerfile  Jenkinsfile  Readme.md
ansible/: deploy.yml
src/: Calculator.cpp  Calculator.h  main.cpp
tests/: test_calculator.cpp
